# Spark-GPT

./: README.md  delete_pyc.py  pyproject.toml  requirements.txt
nonebot/adapters/discord/: adapter.py  bot.py  config.py  event.py  exception.py  message.py  payload.py  typing.py  utils.py
nonebot/adapters/discord/api/: __init__.py  client.py  client.pyi  handle.py  model.py  request.py  types.py  utils.py
nonebot_plugin_spark_gpt/: __init__.py
nonebot_plugin_spark_gpt/Spark_desk/: config.py  main.py  spark_api.py  spark_desk_func.py
nonebot_plugin_spark_gpt/api_utils/: Poe.py  bard.py  chatgpt_web.py  load_config.py  newbing.py  slack_claude.py  spark_desk.py
nonebot_plugin_spark_gpt/api_utils/source_data/: newbing_config.py  spark_desk_config.py
nonebot_plugin_spark_gpt/bard/: bard_api.py  bard_func.py  config.py  main.py
nonebot_plugin_spark_gpt/chatbot/: Poe.py  bard.py  chatgpt_web.py  claude_ai.py  load_config.py  newbing.py  slack_claude.py  spark_desk.py  sydneybing.py  tongyiqianwen.py
nonebot_plugin_spark_gpt/chatbot/utils/: poe.py
nonebot_plugin_spark_gpt/chatbot/utils/EdgeGPT/: EdgeGPT.py  EdgeUtils.py  ImageGen.py  chathub.py  constants.py  main.py
nonebot_plugin_spark_gpt/chatbots/: BaseChatBot.py  BingBot.py  __init__.py
nonebot_plugin_spark_gpt/chatgpt_web/: chatgpt_web_func.py  config.py  main.py  web_api.py
nonebot_plugin_spark_gpt/claude_slack/: claude_func.py  config.py  main.py  slack_api.py
nonebot_plugin_spark_gpt/common/: __init__.py  common_func.py  config.py  load_config.py  main.py  mytypes.py  prefix_data.py  prompt_data.py  user_data.py
nonebot_plugin_spark_gpt/common/render/: render.py
nonebot_plugin_spark_gpt/common/utils/: pwframework.py  utils.py
nonebot_plugin_spark_gpt/common/web/: app.py
nonebot_plugin_spark_gpt/newbing/: config.py  main.py  newbing_api.py  newbing_func.py
nonebot_plugin_spark_gpt/nonebot/: __init__.py  chat_consumer.py  chat_manager.py  command_manager.py  model_manager.py  prompt_manager.py
nonebot_plugin_spark_gpt/nonebot_plugin_spark_gpt_new/: __init__.py
nonebot_plugin_spark_gpt/nonebot_plugin_spark_gpt_new/api_utils/: Poe.py  bard.py  load_config.py  newbing.py  spark_desk.py
nonebot_plugin_spark_gpt/nonebot_plugin_spark_gpt_new/common/: config.py  mytypes.py  prompt_data.py  user_data.py
nonebot_plugin_spark_gpt/poe/: config.py  main.py  poe_api.py  poe_func.py
nonebot_plugin_spark_gpt/poe_http/: config.py  main.py  poe_api.py  poe_func.py
nonebot_plugin_spark_gpt/poe_pw/: config.py  main.py  poe_api.py  poe_func.py  pwframework.py
nonebot_plugin_spark_gpt/type_store/: user_chat.py  web_config.py
nonebot_plugin_spark_gpt/utils/: extractor.py  old.py  render.py  text_render.py  utils.py
nonebot_plugin_spark_gpt/utils/assets/: template.html
nonebot_plugin_spark_gpt/utils/templates/: list.html  markdown.css  markdown.html  menu.html  menus.html  template.html
(+22 files in other folders)
