[tool.poetry]
name = "nonebot_plugin_spark_gpt"
version = "1.0.8"
description = "Spark-GPT,将多种来源的gpt接入qq,TG及更多平台,提供webui进行实时配置热更新,效率高超,使用便捷,管理完善,功能强大"
authors = ["canxin121 <1969730106@qq.com>"]
readme = "README.md"
packages = [{ include = "nonebot_plugin_spark_gpt" }]

[tool.poetry.dependencies]
nonebot-adapter-onebot = "^2.2.1"
nonebot-adapter-telegram = "^0.1.0b6"
nonebot-adapter-kaiheila = "^0.2.6"
nonebot-adapter-qqguild = "^0.2.3"
python = "^3.9"
aiohttp = "^3.8.4"
bidict = "^0.22.1"
edgegpt = "0.11.8"
Sydneygpt = "0.11.8"
fastapi = "^0.98.0"
httpx = "^0.24.1"
markdown = "^3.4.3"
poe-api = "^0.4.8"
pydantic = "^1.10.9"
slack-sdk = "^3.21.3"
uvicorn = "^0.22.0"
bardapi = "^0.1.18"
python-multipart = "^0.0.6"
python_markdown_math = "^0.8"
charset_normalizer = "^3.1.0"
imgkit = "^1.2.3"
Pygments = "^2.15.1"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
