[tool.poetry]
name = "nonebot_plugin_spark_gpt"
version = "1.2.5"
description = "Spark-GPT,将多种来源的gpt接入qq,TG,Kook,Discord及更多平台,提供webui进行实时配置热更新,效率高超,使用便捷,管理完善,功能强大"
authors = ["canxin121 <1969730106@qq.com>"]
readme = "README.md"
packages = [{ include = "nonebot_plugin_spark_gpt"},{ include = "nonebot"}]

[tool.poetry.dependencies]
nonebot-adapter-onebot = "^2.2.1"
nonebot-adapter-telegram = "^0.1.0b6"
nonebot-adapter-kaiheila = "^0.2.7"
nonebot-plugin-htmlrender = "^0.2.1"
nonebot-plugin-templates = "^0.1.4"
python = "^3.10"
aiohttp = "^3.8.4"
bidict = "^0.22.1"
edgegpt = "0.12.1"
Sydneygpt = "0.11.8"
fastapi = "^0.100.0"
httpx = "^0.24.1"
async-poe-client = "^0.2.2"
pydantic = "^1.10.9"
slack-sdk = "^3.21.3"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
charset_normalizer = "^3.1.0"
googlebard = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
