[tool.poetry]
name = "nonebot_plugin_spark_gpt"
version = "2.0.0"
description = "Spark-GPT,将多种来源的gpt接入qq,TG,Kook,Discord及更多平台,提供webui进行实时配置热更新,效率高超,使用便捷,管理完善,功能强大"
authors = ["canxin121 <1969730106@qq.com>"]
readme = "README.md"
packages = [
    { include = "nonebot_plugin_spark_gpt" },
    { include = "nonebot_plugin_saa" },
]

[tool.poetry.dependencies]
nonebot-plugin-alconna = ">=0.22.4"
nonebot-plugin-htmlrender = ">=0.2.1"
nonebot-plugin-templates = ">=0.1.6"
nonebot-plugin-bind = ">=0.2.0"
nonebot-plugin-web-config = ">=0.1.2"
python = ">=3.8"
aiofiles = ">=23.2.1"
aiohttp = ">=3.8.5"
async-bing-client = ">=0.1.6"
async-poe-client = ">=0.3.4"
async-claude-client = ">=0.1.2"
jinja2 = ">=3.1.2"
markdown = ">=3.4.4"
tiktoken = ">=0.4.0"
# saa
httpx = ">=0.24.1"
strenum = ">=0.4.15"
typing-extensions = ">=4.7.1"
anyio = ">=3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
